# springline-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md  clippy.toml  justfile  rustfmt.toml
.github/workflows/: general.yml
configuration/: application.toml
hak/: hak
resources/: application.json  application.ron  application.yaml  decision.polar  decision_basis.polar  decision_preamble.polar  demo.yaml  eligibility.polar  eligibility_basis.polar  eligibility_ext.polar  governance.polar  governance_preamble.polar  local.ron  local.yaml  orig-application.yaml  production.ron  production.yaml  sit-1.yaml
scripts/: build_springline_docker.sh  follow_container.sh  run_springline_local.sh
springline/: Cargo.toml  Dockerfile  LICENSE  README.md  docker.env  grafana-dashboard.json
springline-explorer/: Cargo.toml  README.md
springline-explorer/src/: app_menu.rs  lib.rs  main.rs  policy.rs  policy_explorer.rs  settings.rs
springline-explorer/src/policy/: make_policy.rs  populate.rs
springline-explorer/src/policy/populate/: eligibility.rs  metric_catalog.rs
springline-transcode/: Cargo.toml
springline-transcode/src/: main.rs
springline/chart/: config-map.yaml  temp.yaml
springline/chart/springline/: Chart.yaml  values.yaml
springline/chart/springline/env/: cluster-config.yaml  decision_basis.polar  dev.yaml  pilot.yaml  tmpl.yaml  unimap-campaign-mgmt-pilot.yaml  unimap-drive-filtering-pilot.yaml
springline/chart/springline/templates/: NOTES.txt  _helpers.tpl  autoscaler-k8s-api-cidr-egress.yaml  config_map.yaml  deployment.yaml  ingress.yaml  network-policy.yaml  networkpolicy-api.yaml  networkpolicy-k8s.yaml  role-binding.yaml  role.yaml  service.yaml  serviceaccount.yaml
springline/chart/springline/templates/tests/: test-connection.yaml
springline/docs/: springline-pipeline.puml
springline/proptest-regressions/phases/decision/policy_tests/: resources_policy_tests.txt
springline/proptest-regressions/phases/eligibility/: policy_tests.txt
springline/proptest-regressions/phases/plan/: model.txt
springline/src/: engine.rs  kubernetes.rs  lib.rs  main.rs  math.rs  metrics.rs  model.rs  settings.rs
springline/src/engine/: http.rs  metrics_exporter.rs  monitor.rs  service.rs
springline/src/flink/: context.rs  error.rs  mod.rs  model.rs
springline/src/flink/model/: catalog.rs  mod.rs  parallelism.rs  portfolio.rs  tests.rs  window.rs
springline/src/kubernetes/: context.rs  deploy.rs  error.rs  mod.rs  taskmanager.rs
springline/src/model/: mod.rs  nr_replicas.rs  saturate.rs
springline/src/phases/: collect_window.rs  metric_catalog.rs  mod.rs  policy_test_fixtures.rs  portfolio.rs  tests.rs
springline/src/phases/act/: action.rs  kubernetes.rs  mod.rs  patch_replicas.rs  scale_actuator.rs
springline/src/phases/act/action/: composite.rs  cull.rs  cull_taskmanagers.rs  flink_savepoint.rs  flink_settlement.rs  kubernetes_settlement.rs  patch_replicas.rs  prepare_data.rs  restart.rs  restart_jobs.rs  savepoint.rs  settle_rescaled_replicas.rs
springline/src/phases/collection/: flink_metrics.rs  flink_metrics_source.rs  mod.rs
springline/src/phases/collection/flink/: api_model.rs  collect_scope.rs  collect_taskmanager_admin.rs  collect_vertex.rs  generators.rs  metric_order.rs  mod.rs  model.rs
springline/src/phases/decision/: context.rs  mod.rs  policy.rs  policy_tests.rs  result.rs
springline/src/phases/decision/policy_tests/: decision_template_data_strategy.rs  metric_catalog_strategy.rs  policy_scenario.rs  resources_policy_tests.rs  resources_regression_tests.rs
springline/src/phases/eligibility/: context.rs  mod.rs  policy.rs  policy_regression_tests.rs  policy_tests.rs  tests.rs
springline/src/phases/eligibility/policy_tests/: policy_scenario.rs  resources_policy_tests.rs  resources_regression_tests.rs
springline/src/phases/execution/: mod.rs  patch_replicas.rs
springline/src/phases/governance/: context.rs  mod.rs  policy.rs  result.rs  stage.rs
springline/src/phases/plan/: benchmark.rs  clipping.rs  clipping_handling.rs  context.rs  forecast.rs  mod.rs  model.rs  performance_history.rs  performance_repository.rs  planning.rs
springline/src/phases/plan/forecast/: calculator.rs  least_squares.rs  regression.rs  ridge_regression.rs
springline/src/phases/sense/: mod.rs
springline/src/phases/sense/flink/: api_model.rs  generators.rs  job_taskmanager_sensor.rs  metric_order.rs  mod.rs  scope_sensor.rs  standard_orders.rs  taskmanager_admin_sensor.rs  vertex_sensor.rs
springline/src/settings/: action_settings.rs  collection_settings.rs  engine_settings.rs  execution_settings.rs  flink_settings.rs  governance_rule_settings.rs  governance_settings.rs  kubernetes_settings.rs  plan_settings.rs  sensor_settings.rs
springline/src/settings/collection_settings/: flink_settings.rs  metric_order.rs
springline/src/settings/sensor_settings/: flink_settings.rs
springline/tests/data/: decision.json  decision.ron  settings.ron  settings.yaml
springline/tests/phases/: fixtures.rs  main.rs  test_decision.rs  test_eligibility.rs  test_flink_collection.rs  test_flink_collection_combined_stage.rs  test_flink_plan_calculator.rs  test_flink_planning_stage.rs  test_flink_sensor_combined_stage.rs  test_governance.rs
src/: engine.rs  error.rs  lib.rs  main.rs  metrics.rs  settings.rs
src/engine/: http.rs  monitor.rs  service.rs
src/phases/: metric_catalog.rs  mod.rs
src/phases/collection/: flink_metrics_source.rs  mod.rs
src/phases/decision/: context.rs  mod.rs  policy.rs  result.rs
src/phases/eligibility/: context.rs  mod.rs  policy.rs
src/phases/execution/: mod.rs
src/phases/governance/: context.rs  mod.rs  policy.rs  result.rs
src/phases/plan/: benchmark.rs  forecast.rs  mod.rs  performance_history.rs  performance_repository.rs  planning.rs
src/settings/: collection_settings.rs  execution_settings.rs  plan_settings.rs
tests/data/: decision.ron  settings.ron
tests/phases/: fixtures.rs  main.rs  test_decision.rs  test_eligibility.rs  test_flink_plan_calculator.rs  test_flink_planning_stage.rs  test_governance.rs
(+3 files in other folders)
