[package]
name = "springline"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proctor = { git = "https://github.com/dmrolfs/proctor-rs" }
anyhow = "*"
approx = "*"
async-trait = "*"
cast_trait_object = "*"
chrono = "*"
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
config = { version = "*", default-features = false, features = ["toml", "hjson"] }
dashmap = "*"
enum-display-derive = "*"
itertools = "*"
lazy_static = "*"
maplit = "*"
nalgebra = ">=0.27.1"
num-traits = "*"
num_cpus = "*"
oso = "*"
polar-core = "*"
reqwest = { version = "0.11", features = ["json", "multipart"] }
reqwest-middleware = "*"
reqwest-retry = "*"
serde = "*"
serde_json = "*"
serde_with = { version = "*", features = ["chrono", "json", "macros"] }
splines = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-futures = "*"

[dev-dependencies]
pretty_assertions = "*"
claim = "*"
mockall = "*"
tokio-test = "*"
serde_test = "*"
fake = { version = "*", features = ["chrono"] }
