[package]
name = "springline-explorer"
version = "0.1.0"
authors = ["Damon Rolfs <drolfs@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dmrolfs/springline-rs/springline-explorer"
description = """
Autoscaling policy and configuration development and testing tool for Springline autoscaler.
"""
categories = [
  "hardware-support",
]
keywords = ["autoscaling", "flink", "stream", "data", "processing",]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "explorer"
path = "src/main.rs"

[dependencies]
springline = { path = "../springline", version = "*" }
proctor = { git = "https://github.com/dmrolfs/proctor-rs", branch = "main" }
#proctor = { path = "../../proctor-rs" }
settings_loader = { git = "https://github.com/dmrolfs/settings-loader-rs", features = ["http"] }
#settings_loader = { path = "../../settings-loader-rs", features = ["http"] }

anyhow = "1.0.56"
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
# until ron feature and builder fns in *published* config-rs
config = { git = "https://github.com/dmrolfs/config-rs" } # until ron feature and builder fns in *published* config-rs
#config = { version = "^0.11", default_features = true, features = ["ron"] }
#config = { version = "^0.11" }
console = "0.15.0"
dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
once_cell = "1.10.0"
oso = "0.26.0"
pretty-snowflake = { git = "https://github.com/dmrolfs/pretty-snowflake-rs" }
ron = "0.7.0"
serde = "1.0.136"
serde_json = "1.0.79"
serde-transcode = "1.1.1"
tailcall = "0.1.6"
tracing = "0.1.31"
trim-margin = "0.1.0"
