[package]
name = "springline-explorer"
version = "0.1.0"
authors = ["Damon Rolfs <drolfs@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dmrolfs/springline-rs/springline-explorer"
description = """
Autoscaling policy and configuration development and testing tool for Springline autoscaler.
"""
categories = [
  "hardware-support",
]
keywords = ["autoscaling", "flink", "stream", "data", "processing",]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "explorer"
path = "src/main.rs"

[dependencies]
springline = { path = "../springline", version = "*" }
proctor = { git = "https://github.com/dmrolfs/proctor-rs", branch = "main" }
#proctor = { path = "../../proctor-rs" }
settings_loader = { git = "https://github.com/dmrolfs/settings-loader-rs", features = ["http"] }
#settings_loader = { path = "../../settings-loader-rs", features = ["http"] }

anyhow = "1.0.66"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
# until ron feature and builder fns in *published* config-rs
config = "0.13.2"
#config = { version = "^0.11", default_features = true, features = ["ron"] }
#config = { version = "^0.11" }
console = "0.15.2"
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
once_cell = "1.15.0"
oso = "0.26.3"
pretty-snowflake = { git = "https://github.com/dmrolfs/pretty-snowflake-rs" }
ron = "0.8.0"
serde = "1.0.147"
serde_json = "1.0.87"
serde-transcode = "1.1.1"
static_assertions = "1.1.0"
tailcall = "0.1.6"
tracing = "0.1.37"
trim-margin = "0.1.0"
