[package]
name = "springline-transcode"
version = "0.1.0"
authors = ["Damon Rolfs <drolfs@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dmrolfs/springline-rs/springline"
description = """
Transcode configuration files between supported formats.
"""
categories = [
  "hardware-support",
]
keywords = ["autoscaling", "flink", "stream", "data", "processing",]
edition = "2021"

[[bin]]
name = "transcode"
path = "src/main.rs"

[dependencies]
springline = { path = "../springline", version = "*" }
anyhow = "1.0.61"
clap = "3.2.17"
serde = "1.0.143"
ron = "0.7.1"
serde_json = "1.0.83"
serde_yaml = "0.9.9"
serde-transcode = "1.1.1"
thiserror = "1.0.32"
