[package]
name = "springline-transcode"
version = "0.1.0"
authors = ["Damon Rolfs <drolfs@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dmrolfs/springline-rs/springline"
description = """
Transcode configuration files between supported formats.
"""
categories = [
  "hardware-support",
]
keywords = ["autoscaling", "flink", "stream", "data", "processing",]
edition = "2021"

[[bin]]
name = "transcode"
path = "src/main.rs"

[dependencies]
springline = { path = "../springline", version = "*" }
anyhow = "1.0.64"
clap = "3.2.20"
serde = "1.0.144"
ron = "0.8.0"
serde_json = "1.0.85"
serde_yaml = "0.9.11"
serde-transcode = "1.1.1"
thiserror = "1.0.34"
