[package]
name = "springline"
version = "0.14.0"
authors = ["Damon Rolfs <drolfs@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dmrolfs/springline-rs/springline"
description = """
Autoscaling driver for Flink servers.
"""
categories = [
  "hardware-support",
]
keywords = ["autoscaling", "flink", "stream", "data", "processing",]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "springline"
path = "src/main.rs"

[features]
default = ["latest_k8s"]
latest_k8s = ["k8s-openapi/v1_22"]

[dependencies]
pretty-snowflake = { git = "https://github.com/dmrolfs/pretty-snowflake-rs" }
proctor = { git = "https://github.com/dmrolfs/proctor-rs", branch = "main" }
#proctor = { path = "../../proctor-rs" }
settings_loader = { git = "https://github.com/dmrolfs/settings-loader-rs", features = ["http"] }
#settings_loader = { path = "../../settings-loader-rs", features = ["http"] }

anyhow = "1.0.57"
approx = "0.5.1"
async-trait = "0.1.53"
axum = "0.5.4"
#axum-extra = "0.1.4"
axum-debug = "0.3.3"
cast_trait_object = "0.1.3"
chrono = "0.4.19"
clap = { version = "3.1.15", features = ["derive"] }
# until ron feature and builder fns in *published* config-rs
#config = { git = "https://github.com/dmrolfs/config-rs" } # until ron feature and builder fns in *published* config-rs
config = { version = "0.13.1", default_features = true }
#config = { version = "^0.11" }
console = "0.15.0"
console-subscriber = "0.1.5"
dashmap = "5.2"
dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
either = { version = "1.6.1", features = ["serde"] }
enum-display-derive = "0.1.1"
enumflags2 = "0.7.5"
frunk = "0.4.0"
futures = "0.3.21"
futures-util = "0.3.21"
fuzzy-matcher = "0.3.7"
heck = "0.4.0"
http = "0.2.7"
hyper = { version = "0.14.18", features = ["server", "tcp", "stream"] }
itertools = "0.10.3"
kube = { version = "0.71.0", features = ["oauth", "client", "rustls-tls"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] } # kube-client 0.69.1 is fixen on v1_22
maplit = "1.0.2"
nalgebra = "0.31.0"
num-traits = "0.2.15"
num_cpus = "1.13.1"
once_cell = "1.10.0"
oso = "0.26.0"
polar-core = "0.26.0"
prometheus = { version = "0.13.0", features = ["process"] }
prometheus-static-metric = "0.5.1"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["json", "multipart", 'rustls-tls'] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
ron = "0.7.0"
secrecy = "0.8.0"
serde = "1.0.137"
serde_json = "1.0.81"
serde_repr = "0.1.8"
serde_with = { version = "1.13.0", features = ["chrono", "json", "macros"] }
serde-transcode = "1.1.1"
splines = "4.1.0"
tailcall = "0.1.6"
thiserror = "1.0.31"
tokio = { version = "1.18.1", features = ["full", "net", "tracing"] }
tower = { version = "0.4.12", features = ["timeout", "limit"] }
tower-http = { version = "0.3.2", features = ["trace"] }
tracing = "0.1.34"
tracing-bunyan-formatter = "0.3.2"
tracing-flame = "0.2.0"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
trim-margin = "0.1.0"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
lazy_static = "1.4.0"
pretty_assertions = "1.2.1"
claim = "0.5.0"
mockall = "0.11.0"
tokio-test = "0.4.2"
serde_test = "1.0.137"
serde-transcode = "1.1.1"
fake = { version = "2.4.3", features = ["chrono"] }
wiremock = "0.5.13"
rand = "0.8.5"
#inspect_prometheus = { git = "https://github.com/dmrolfs/inspect_prometheus" }
